# PassaRegua

./: README.md  index.html  package-lock.json  package.json
.github/workflows/: main.yml
src/: App.tsx  loading.css  main.tsx  styles.css
src-tauri/: Cargo.toml  database.db  tauri.conf.json  test.db
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  tests.rs
src-tauri/src/db/: db.rs
src-tauri/src/db/models/: Account.rs  Item.rs  Log.rs  Payment.rs  Product.rs  User.rs
src/components/: ConfirmModal.tsx
src/components/buttons/: ButtonComponentLink.tsx
src/components/feedback/: Feedback.tsx  FeedbackInterface.tsx  feedback.css
src/components/inputs/: TextInput.tsx
src/components/numberInput.tsx/: NumberInput.tsx
src/components/table/: table.css  tableComponent.tsx
src/interfaces/: Account.ts  FeedbackProps.ts  Item.ts  Log.ts  Payment.ts  Product.ts  User.ts  ZodInputs.ts
src/pages/: FormularioCriaUsuario.tsx  PaginaContas.tsx  PaginaInicial.tsx  PaginaProdutos.tsx  PaginaUsuarios.tsx
src/pages/PaginaProdutos/: FormularioCriaProduto.tsx  FormularioEditaProduto.tsx  PaginaProdutos.tsx
src/pages/PaginaUsuarios/: FormularioCriaUsuario.tsx  FormularioEditaUsuario.tsx  PaginaUsuarios.tsx
src/pages/paginaContas/: FormularioEditaPreco.tsx  PaginaAdicionarItem.tsx  PaginaContas.tsx  PaginaCriaPagamentos.tsx  PaginaCriarConta.tsx  PaginaCriarNota.tsx  PaginaItems.tsx  PaginaPagamentos.tsx
src/pages/paginaLogs/: PaginaLogs.tsx
src/routes/: appRouter.tsx  loading.css
src/services/: fetchService.ts
(+1 files in other folders)
